// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeConvertWrap Save Snapshot datePicker 1`] = `
<div
  className="ant-picker"
  onMouseUp={[Function]}
>
  <div
    className="ant-picker-input"
  >
    <input
      autoComplete="off"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      placeholder="Select date"
      readOnly={true}
      size={12}
      title=""
      value=""
    />
    <span
      className="ant-picker-suffix"
    >
      <span
        aria-label="calendar"
        className="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`TimeConvertWrap Save Snapshot rangePicker 1`] = `
<div
  className="ant-picker ant-picker-range"
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <div
    className="ant-picker-input ant-picker-input-active"
  >
    <input
      autoComplete="off"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      placeholder="Start date"
      readOnly={true}
      size={12}
      value=""
    />
  </div>
  <div
    className="ant-picker-range-separator"
  >
    <span
      aria-label="to"
      className="ant-picker-separator"
    >
      <span
        aria-label="swap-right"
        className="anticon anticon-swap-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="swap-right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="ant-picker-input"
  >
    <input
      autoComplete="off"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      placeholder="End date"
      readOnly={true}
      size={12}
      value=""
    />
  </div>
  <div
    className="ant-picker-active-bar"
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "width": 0,
      }
    }
  />
  <span
    className="ant-picker-suffix"
  >
    <span
      aria-label="calendar"
      className="anticon anticon-calendar"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="calendar"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`TimeConvertWrap Save Snapshot timePicker 1`] = `
<div
  className="ant-picker"
  onMouseUp={[Function]}
>
  <div
    className="ant-picker-input"
  >
    <input
      autoComplete="off"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      placeholder="Select time"
      readOnly={true}
      size={10}
      title=""
      value=""
    />
    <span
      className="ant-picker-suffix"
    >
      <span
        aria-label="clock-circle"
        className="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`TimeConvertWrap Save Snapshot timeRangePicker 1`] = `
<div
  className="ant-picker ant-picker-range"
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <div
    className="ant-picker-input ant-picker-input-active"
  >
    <input
      autoComplete="off"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      placeholder="Start time"
      readOnly={true}
      size={10}
      value=""
    />
  </div>
  <div
    className="ant-picker-range-separator"
  >
    <span
      aria-label="to"
      className="ant-picker-separator"
    >
      <span
        aria-label="swap-right"
        className="anticon anticon-swap-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="swap-right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="ant-picker-input"
  >
    <input
      autoComplete="off"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      placeholder="End time"
      readOnly={true}
      size={10}
      value=""
    />
  </div>
  <div
    className="ant-picker-active-bar"
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "width": 0,
      }
    }
  />
  <span
    className="ant-picker-suffix"
  >
    <span
      aria-label="clock-circle"
      className="anticon anticon-clock-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
        />
      </svg>
    </span>
  </span>
</div>
`;
